--- a/config.json
+++ b/config.json
@@ -2,7 +2,8 @@
 	"paths": {
 		"root_directory": "train",
 		"sub_directory_tokenizer": "tokenize",
-		"sub_directory_checkpoints": "checkpoints"
+		"sub_directory_checkpoints": "checkpoints",
+		"sub_directory_model": "model"
 
 	},
 	"data": {
