--- a/requirements_cpu.txt
+++ b/requirements_cpu.txt
@@ -64,9 +64,9 @@ six==1.17.0
 stack-data==0.6.3
 sympy==1.13.1
 tokenizers==0.21.0
-# torch==2.6.0+cpu
-# torchaudio==2.6.0+cpu
-# torchvision==0.21.0+cpu
+torch==2.6.0
+torchaudio==2.6.0
+torchvision==0.21.0
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
