--- a/requirements_cuda.txt
+++ b/requirements_cuda.txt
@@ -14,36 +14,48 @@ debugpy==1.8.12
 decorator==5.1.1
 dill==0.3.8
 executing==2.2.0
-filelock==3.13.1
+filelock==3.17.0
 Flask==3.1.0
 Flask-Cors==5.0.0
 frozenlist==1.5.0
-fsspec==2024.6.1
+fsspec==2024.9.0
 huggingface-hub==0.28.1
 idna==3.10
 ipykernel==6.29.5
 ipython==8.32.0
 itsdangerous==2.2.0
 jedi==0.19.2
-Jinja2==3.1.4
+Jinja2==3.1.5
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
-MarkupSafe==2.1.5
+MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 mpmath==1.3.0
 multidict==6.1.0
 multiprocess==0.70.16
 narwhals==1.25.1
 nest-asyncio==1.6.0
-networkx==3.3
-numpy==2.1.2
+networkx==3.4.2
+numpy==2.1.3
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
-pillow==11.0.0
+pillow==11.1.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.50
 propcache==0.2.1
@@ -59,17 +71,18 @@ pyzmq==26.2.1
 referencing==0.36.2
 requests==2.32.3
 rpds-py==0.22.3
-setuptools==70.2.0
+setuptools==75.8.0
 six==1.17.0
 stack-data==0.6.3
 sympy==1.13.1
 tokenizers==0.21.0
-# torch==2.6.0+cpu
-# torchaudio==2.6.0+cpu
-# torchvision==0.21.0+cpu
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
+triton==3.1.0
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
