--- a/summit-web/package.json
+++ b/summit-web/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "prod": "vite --config vite.config.prod.js"
   },
   "dependencies": {
     "sass": "^1.83.4",
