--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
 
 	},
 	"data": {
-		"datasource": "opus_books",
+		"datasource": "enimai/MuST-C-de",
 		"lang_source": "de",
 		"lang_target": "en"
 	},
@@ -23,7 +23,7 @@
 		"batch_size": 8,
 		"learning_rate": 0.0001,
 		"eps": 1e-9,
-		"epochs": 10
+		"epochs": 12
 	},
 	"app": {
 		"ip": "127.0.0.1",
