Missed configuration file

--- a/config_docker.json
+++ b/config_docker.json
@@ -7,7 +7,7 @@
 
 	},
 	"data": {
-		"datasource": "opus_books",
+		"datasource": "enimai/MuST-C-de",
 		"lang_source": "de",
 		"lang_target": "en"
 	},
